feat: add repeatable gesture modifiers
